# -*- mode: python -*-
# vi: set ft=python :

cc_library(
    name = "unix_socket_lcm",
    srcs = ["unix_socket_lcm.cc"],
    deps = [
        "@drake//lcm:interface",
        "@drake//common:essential",
        "@lcm",
    ],
    hdrs = ["unix_socket_lcm.h"],
)

cc_test(
    name = "unix_socket_lcm_test",
    srcs = ["test/unix_socket_lcm_test.cc"],
    deps = [
        ":unix_socket_lcm",
        "@drake//common:temp_directory",
        "@gtest//:main",
    ],
)
