# -*- mode: python -*-
# vi: set ft=python :

cc_library(
    name = "unix_socket_lcm",
    srcs = ["unix_socket_lcm.cc"],
    deps = [
        ":unix_seqpacket",
        "@drake//lcm:interface",
        "@drake//common:essential",
        "@lcm",
    ],
    hdrs = ["unix_socket_lcm.h"],
)

cc_library(
    name = "unix_seqpacket",
    srcs = ["unix_seqpacket.cc"],
    deps = [
        "@drake//common:essential",
        "@lcm",
    ],
    hdrs = ["unix_seqpacket.h"],
)

cc_test(
    name = "unix_seqpacket_test",
    srcs = ["test/unix_seqpacket_test.cc"],
    deps = [
        ":unix_seqpacket",
        "@gtest//:main",
        "@fmt",
    ],
)
